--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<Name><b>WitherPearl Home Page<br><br></Name>
-<Games>Games<br><br></Games>
-<a href="https://witherpearl.github.io/The-Ad-Tree/"style="color:#A020F0">The Ad Tree</a>
+<html>
+
+<head>
+
+<style>
+
+
+</style>
+
+</head>
+
+<body style="background-color:black; text-align: center;">
+
+<Name><b><Name style="color:#A020F0; font-size:50px;">WitherPearl Home Page<br><br></Name>
+
+<Games><Games style="color:#A020F0; font-size:30px;">Games<br><br></Games>
+
+<Links><a href="https://witherpearl.github.io/The-Ad-Tree/"style="color:#A020F0; font-size:25px;">The Ad Tree</a></Links>
+
+</body>
+
+</html>
